Updating gitlab-ci.yml to work with vite

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,18 +50,20 @@ lint-test-job:
 #     # CI/CD variables, that value will override the value here.
 #     # You need to substitute in your real values for
 #     # GROUP_NAME, PROJECT_NAME, & WEBSERVICE_NAME below.
+#     # Don't forget to also replace PROJECT NAME in the npm run build line as well
 #     PUBLIC_URL: https://GROUP_NAME.gitlab.io/PROJECT_NAME/
 #     REACT_APP_API_HOST: https://DEPLOYED_API_SERVICE.mod3projects.com
 #   script:
 #     - cd ghi
 #     - npm install
-#     - npm run build
+#     - npm run lint
+#     - npm run build -- --base=/PROJECT_NAME/
 #     The following line creates a _redirects file to redirect all URLs to index.html
 #     Documentation: https://docs.gitlab.com/ee/user/project/pages/redirects.html#rewrite-all-requests-to-a-root-indexhtml
-#     - echo "/* /index.html 200" > build/_redirects
+#     - echo "/* /index.html 200" > dist/_redirects
 #   artifacts:
 #     paths:
-#       - ghi/build/
+#       - ghi/dist/
 
 # # Deploy the React/JavaScript front-end to GitLab pages
 # pages:
@@ -73,7 +75,7 @@ lint-test-job:
 #   needs:
 #     - build-front-end-job
 #   script:
-#     - mv ghi/build/ public
+#     - mv ghi/dist/ public
 #   artifacts:
 #     paths:
 #       - public
