--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       CORS_HOST: http://localhost:3000
       DATABASE_URL: postgresql://user:password01@postgres/truth_in_tech
       WAIT_HOSTS: postgres:5432
+      SIGNING_KEY: ${SIGNING_KEY}
       PORT: 8000
     build:
       context: api
