Changed CMD line in Dockerfile

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -28,4 +28,5 @@ RUN python -m pip install -r requirements.txt
 # to be run automatically, delete the previous CMD line and
 # uncomment the following COPY and CMD lines
 COPY migrations migrations
-CMD python -m migrations up && uvicorn main:app --host 0.0.0.0 --port 80 --forwarded-allow-ips "*"
+# CMD python -m migrations up && uvicorn main:app --host 0.0.0.0 --port 80 --forwarded-allow-ips "*"
+CMD python -m migrations up && uvicorn main:app --host 0.0.0.0 --port 80
